--- a/data/config/config.json
+++ b/data/config/config.json
@@ -1,8 +1,8 @@
 {
 	"dashboard-tracks-default_order": "asc",
 	"dashboard-tracks-default_per_page": "20",
-	"dashboard-tracks-default_sort": "TIT2",
-	"dashboard-tracks-heading": "description",
+	"dashboard-tracks-default_sort": "TPE1",
+	"dashboard-tracks-heading": "tag",
 	"server-host": "0.0.0.0",
 	"server-port": "4000"
 }
